[package]
name = "dlq"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
config = "0.15.9"
once_cell = "1.20.3"
serde = "1.0.218"
serde_json = "1.0.140"
sqlx = "0.8.3"
tokio = { version = "1.43.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
