[package]
name = "dlq"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
axum = { version = "0.8.1", features = ["multipart"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
captcha_rust = "0.1.3"
chrono = { version = "0.4.40", features = ["serde"] }
config = "0.15.11"
jsonwebtoken = "9.3.1"
lettre = "0.11.15"
lettre_email = "0.9.4"
nanoid = "0.4.0"
once_cell = "1.21.1"
redis = "0.29.1"
serde = "1.0.219"
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "postgres", "chrono"] }
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace", "cors"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
